BP-816: fix criterion vertical align

--- a/app/blocks/b-score/b-score_school-list/b-score_school-list.scss
+++ b/app/blocks/b-score/b-score_school-list/b-score_school-list.scss
@@ -15,8 +15,6 @@
 .b-score__current-criterion-value {
     display: inline-block;
 
-	vertical-align: middle;
-
     width: 54px;
     margin: 0;
 }
